--- a/frontend/src/components/PostListPage/Posts.css
+++ b/frontend/src/components/PostListPage/Posts.css
@@ -2,10 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 100%;
 }
 
 .posts-grid-main-layout40 {
