--- a/frontend/src/components/PostListPage/Search.css
+++ b/frontend/src/components/PostListPage/Search.css
@@ -2,10 +2,13 @@
     position: sticky;
     top: 70px;
     display: flex;
-    height: 575px;
+    height: max-content;
+    width: 100%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
     padding-top: 20px;
+    padding-bottom: 20px;
     padding-left: 20px;
+    padding-right: 20px;
     background-color: #FFDD88;
 }
 
@@ -17,14 +20,14 @@
 
 .search-grid-layout40 {
     display: grid;
-    grid-template-columns: 300px;
+    grid-template-columns: 1fr;
     grid-template-rows: 20px 50px 70px 70px 70px 80px 20px 90px 60px;
     align-items: center;
 }
 
 .search-sub-grid-layout40 {
     display: grid;
-    grid-template-columns: 150px 150px;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 60px;
     align-items: center;
 }
@@ -42,9 +45,9 @@
     border: none;
     border-radius: 2px;
     height: 40px;
-    width: 290px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 .search-input-full::placeholder {
     color: #595959;
@@ -52,10 +55,10 @@
 }
 
 .search-choice-haft40 {
-    width: 140px;
     height: 40px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 96%;
+    margin-left: 2%;
+    margin-right: 2%;
     /*outline: none;*/
     border: normal;
     border-radius: 2px;
@@ -64,10 +67,10 @@
 }
 
 .search-choice-full40 {
-    width: 290px;
     height: 40px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
     /*outline: none;*/
     border: normal;
     border-radius: 2px;
@@ -91,10 +94,10 @@
 
 .button-occupation-ok40 {
     background-color: #FE9312;
-    width: 140px;
     height: 50px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
     border-radius: 10px;
     text-align: center;
     box-shadow: 1px 3px 3px 1px #9E9E9E;
@@ -102,10 +105,10 @@
 
 .button-occupation-cancel40 {
     background-color: gray;
-    width: 140px;
     height: 50px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
     border-radius: 10px;
     text-align: center;
     box-shadow: 1px 3px 3px 1px #9E9E9E;
