--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -136,6 +136,7 @@ a:link {
 .tutor-voting { 
    margin-left: 43%;
    width: 400px;
+   display: inline-flex;
 }
 
 .tutor-dayreg { 
@@ -305,7 +306,32 @@ a:link {
    font-style: normal;
  }
 
+ .button-connect-553 {
+   background-color: white;
+   border-radius: 100px;
+   box-shadow: 2px 3px 3px 2px #00000040;
+   display: flex;
+   border: none;
+   height: 40px;
+   width: 10%;
+   margin-left: 1%;
+   position: relative;
+   margin-top: .5%;
+ }
 
+ .button-connect-text-553 {
+   letter-spacing: 0;  
+   white-space: nowrap;
+   margin-top: auto;
+   margin-bottom: auto;
+   margin-left: auto;
+   margin-right: auto;
+   color: black;
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: semi-bold;
+ }
  .request-accept-553{
    width: 12%;
    margin-left: 1%;
@@ -334,6 +360,18 @@ a:link {
    margin-left: 5%;
    box-shadow: 1px 3px 3px 1px #9E9E9E;
   }
+
+  .button-requested-553 {
+   background-color: #e4b312;
+   border-radius: 100px;
+   box-shadow: 3px 3px 3px 3px #00000040;
+   display: flex;
+   height: 40px;
+   width: fit-content;
+   margin-left: 1%;
+   margin-top: .6%;
+ }
+ 
  
  .button-request-deny-553 {
    background-color: gray;
