--- a/frontend/src/components/TutorListPage/TutorItem.css
+++ b/frontend/src/components/TutorListPage/TutorItem.css
@@ -41,7 +41,7 @@
     object-fit: fill;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 50%;
 }
 
 .bounder-user-img-tutor-item40 {
@@ -51,7 +51,7 @@
     padding: 5px;
     height: 200px;
     width: 200px;
-    border-radius: 100px;
+    border-radius: 50%;
     background-color: orange;
 }
 .bounder-user-img-tutor-item40:hover{
