--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -45,6 +45,15 @@
 
 .overlap-group-user {
   height: 70px;
+  width: 25%;
+  margin-left: 3%;
+  margin-right: 1%;
+  position: relative;
+  flex-wrap: wrap;
+}
+
+.overlap-group-rate {
+  height: 50px;
   width: 20%;
   margin-left: 3%;
   margin-right: 1%;
@@ -203,7 +212,8 @@
   flex-direction: row;
   margin-top: 2%;
   margin-bottom: 2%;
-  justify-content: center;
+  margin-left: 20%;
+  justify-content: start;
 }
 
 
@@ -334,6 +344,7 @@
 
 .accepted-label {
   height: 70px;
+  width: 350px;
   text-align: left;
   color: rgb(52, 163, 19);
   font-family: montserrat;
@@ -549,6 +560,15 @@
   text-align: center;
   box-shadow: 1px 3px 3px 1px #9E9E9E;
  }
+
+ .label-radiobtn {
+  height: 30px;
+  position: relative;
+  margin-left: 10px;
+  margin-right: 15px;
+  line-height: 20px;
+}
+
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
 
