--- a/frontend/src/components/PostListPage/Posts.css
+++ b/frontend/src/components/PostListPage/Posts.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: min-content;
+    width: 75%;
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
