--- a/frontend/src/components/PostListPage/Posts.css
+++ b/frontend/src/components/PostListPage/Posts.css
@@ -2,16 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 75%;
+    width: 100%;
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+.post-items-list-parent-layout40{
+    padding-top: 70px;
+    width: 75%;
 }
 
 .posts-grid-main-layout40 {
     position: absolute;
     display: flex;
     flex-direction: row;
-    top: 10%;
-    height: 90%;
+    height: 100%;
+    width: 100%;
 }
