Add Image and Remove Image On Tutor, Registutor, Edit Tutor

--- a/frontend/src/components/EditProfilePage/EditProfileTutor.css
+++ b/frontend/src/components/EditProfilePage/EditProfileTutor.css
@@ -376,7 +376,7 @@
    color: white;
 }
 
-.submit-btn {
+.submit-btn-553 {
    border-radius: 3%;
    margin-left: 85px;
    background-color: #FE9312;
@@ -387,7 +387,7 @@
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.student-submit-btn {
+.student-submit-btn-553 {
    border-radius: 3%;
    margin-left: 25%;
    margin-top: 6%;
