--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -309,8 +309,11 @@ a:link {
  }
 
  .scroll-container {
-   width: 350px;
-   height: 200px;
+   width: 80%;
+   margin-left: -18%;
+   margin-top: 6%;
+   height: fit-content;
+   max-height: 400px;
    overflow-x: scroll;
    scroll-behavior: smooth;
    display: flex;
@@ -319,14 +322,59 @@ a:link {
  .scroll-container .scroll-page{
     flex: 1 0;
  }
+
+ .img-cert {
+    width: 150px;
+    max-width: 150px;
+    max-height: 150px;
+ }
+
  .scroll-page {
-   display: flex;
+   /* display: flex; */
    align-items: center;
    justify-content: center;
-   height: 100%;
+   text-align: center;
+   height: fit-content;
+   width: 100px;
+   max-height: 300px;
+   margin-left: 10%;
    font-size: 5em;
  }
 
+ .remove-cert-btn{
+   background-color: green;
+   text-align: center;
+   width: 100px;
+   max-height: 40px;
+   /* margin-left: 20px; */
+   color: white;
+   /* margin-top: -100px; */
+   border-radius: 100px;
+ }
+
+ .remove-btn-text-553{
+    font-size: 20px;
+ }
+
+ .add-cert-btn-553{
+   background-color: green;
+   /* text-align: center; */
+   width: 120px;
+   max-height: 40px;
+   /* margin-left: 20px; */
+   color: white;
+   /* margin-top: -100px; */
+   font-size: 19px;
+   border-radius: 100px;
+ }
+
+ .pos-add-btn-553{
+    position: relative;
+    /* align-items: center; */
+    margin-top: 2%;
+    text-align: center;
+    margin-left: -4%;
+ }
 
  .request-time-553{
    width: 20%;
