--- a/frontend/src/components/PostListPage/Posts.css
+++ b/frontend/src/components/PostListPage/Posts.css
@@ -10,7 +10,7 @@
 
 .post-items-list-parent-layout40{
     padding-top: 70px;
-    width: 75%;
+    width: 100vmax;
 }
 
 .posts-grid-main-layout40 {
