--- a/frontend/src/components/PostListPage/Search.css
+++ b/frontend/src/components/PostListPage/Search.css
@@ -4,6 +4,7 @@
     height: 100%;
     width: 25%;
     max-width: 500px;
+    min-width: 320px;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
     padding-top: 80px;
     padding-bottom: 20px;
