--- a/frontend/src/components/TutorListPage/TutorItem.css
+++ b/frontend/src/components/TutorListPage/TutorItem.css
@@ -3,7 +3,7 @@
     border-radius: 50px;
     margin-top: 30px;
     height: 350px;
-    width:95%;
+    width: 1000px;
 
 
     background-color: rgba(180, 180, 180, 0.5);
