--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -67,7 +67,7 @@
 
 .user_type {
    width: 100px;
-   height: 40px;
+   height: 27px;
    background: #FE9312;
    border-radius: 100px;
    align-items: center;
@@ -122,7 +122,7 @@ a:link {
 
 .user_name {
    width: 170px;
-   height: 35px;
+   height: 27px;
    background: #FE9312;
    color: white;
    margin-left: 35px;
@@ -420,7 +420,7 @@ a:link {
    display: flex;
    border: none;
    height: 40px;
-   width: 10%;
+   width: fit-content;
    margin-left: 1%;
    position: relative;
    margin-top: .5%;
