--- a/frontend/src/components/EditProfilePage/EditProfileTutor.css
+++ b/frontend/src/components/EditProfilePage/EditProfileTutor.css
@@ -64,9 +64,9 @@
    display: none;
 }
 
-.user_type_user {
+.user_type_553 {
    width: 100.21%;
-   height: 3.7%;
+   height: 3%;
    background: #FE9312;
    border-radius: 100px;
    align-items: center;
@@ -79,7 +79,7 @@
 
 .user_type_student {
    width: 100.21%;
-   height: 5.0%;
+   height: 3.7%;
    background: #FE9312;
    border-radius: 100px;
    align-items: center;
@@ -90,9 +90,10 @@
    color:white;
 }
 
-.user_name_user {
+.user_name_553 {
    width: 60.41%;
-   height: 3.7%;
+   min-width: fit-content;
+   height: 2.7%;
    background: #FE9312;
    border-radius: 100px;
    margin-top: 18.63%;
@@ -104,7 +105,7 @@
 
 .user_name_student {
    width: 60.41%;
-   height: 5.0%;
+   height: 3.3%;
    background: #FE9312;
    border-radius: 100px;
    margin-top: 31.63%;
@@ -114,8 +115,8 @@
    padding: 5px;
 }
 
-.label_intro_user{
-   margin-top: 27.5%;
+.label_intro_user-553{
+   margin-top: 37.5%;
    margin-left: 15.34%;
    margin-bottom: 0.5%;
 }
@@ -169,13 +170,19 @@
 
 .option-secure-label {
    margin-left: 70%;
-   margin-top: 2%;
+   margin-top: 3%;
+   width: 100%;
+}
+
+.option-secure-label-553 {
+   margin-left: 100%;
+   margin-top: 3%;
    width: 100%;
 }
 
 .first_secure_label {
    margin-left: 85%;
-   margin-top: 157%;
+   margin-top: 152%;
    width: 100%;
 }
 
@@ -188,6 +195,16 @@
 .option-secure-select {
    width: 50%;
    margin-left: 65.21%;
+   height: 40px;
+   border: none;
+   border-radius: 10px;
+   text-align: center;
+   box-shadow: 1px 3px 3px 1px #9E9E9E;
+}
+
+.option-secure-select-553 {
+   width: 50%;
+   margin-left: 90.21%;
    height: 40px;
    border: none;
    border-radius: 10px;
@@ -214,10 +231,10 @@
    text-align: center;
    box-shadow: 1px 3px 3px 1px #9E9E9E;
 }
-.level_select {
+.level_select-553 {
    width: 50%;
    margin-top: 0.37%;
-   margin-left: 65.21%;
+   margin-left: 90.21%;
    height: 40px;
    border: none;
    border-radius: 10px;
@@ -226,8 +243,8 @@
 }
 
 .birth-day-label{
-   margin-left: 25%;
-   margin-top: 119%;
+   margin-left: 50%;
+   margin-top: 134%;
    margin-bottom: 0.5%;
    width: 100%;
 }
@@ -238,14 +255,14 @@
    width: 100%;
 }
 
-.class-select-label{
-   margin-left: 40.81%;
+.class-select-label-553{
+   margin-left: 60.81%;
    margin-top: 1.4%;
    width: 100%;
 }
 
-.option-multiple-select{
-   margin-left: 45.81%;
+.option-multiple-select-553{
+   margin-left: 70.81%;
    width: 70%;
    max-width: 200px;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -254,25 +271,25 @@
    margin-top: 0.28%;
 }
 
-.salary_control{
+.salary_control_553{
    width: 90%;
-   height: 40px;
-   border-radius: 3%;
+   height: 2.7%;
+   border-radius: 1%;
    margin-left: 12.1%;
    box-shadow: 1px 3px 1px #9E9E9E;   
 }
 
-.intro-control {
-   width: 165%;
-   height: 3.7%;
+.intro-control-553 {
+   width: 175%;
+   height: 2.3%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;   
 }
 
-.intro-student-control {
+.intro-student_control {
    width: 180%;
-   height: 6%;
+   height: 3.3%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;   
@@ -280,15 +297,15 @@
 
 .username_control {
    width: 90%;
-   height: 40px;
+   height: 2.4%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.major-control {
+.major-control-553 {
    width: 90%;
-   height: 40px;
+   height: 2.85%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -296,47 +313,47 @@
 
 .address-control {
    width: 90%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.address-student-control {
+.address-student_control {
    width: 115%;
-   height: 40px;
+   height: 3.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.email_control {
+.email_control-553 {
    width: 90%;
-   height: 40px;
+   height: 2.85%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.email-student-control {
+.email-student_control {
    width: 115%;
-   height: 40px;
+   height: 3.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.other-info-control {
+.other-info-control-553 {
    width: 90%;
-   height: 40px;
+   height: 2.85%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.other-info-student-control {
+.other-info-student_control {
    width: 115%;
-   height: 40px;
+   height: 3.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -346,8 +363,8 @@
    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
 }
 
-.cert-input {
-   width: 90%;
+.cert-input-553 {
+   width: 96%;
    background: white;
    height: 180px;
    border-radius: 3%;
@@ -422,8 +439,9 @@
    box-shadow: 1px 3px 1px #9E9E9E;
 }
 
-.birth-day-select { 
-   margin-left: 15%; 
+.birth-day-select-553 { 
+   margin-left: 43%;
+   max-width: fit-content; 
    border-radius: 10px;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
