--- a/frontend/src/components/TutorRegisterPage/TutorRegister.css
+++ b/frontend/src/components/TutorRegisterPage/TutorRegister.css
@@ -200,8 +200,8 @@
 }
 
 .birthDay{
-   margin-left: 25%;
-   margin-top: 152%;
+   margin-left: 35%;
+   margin-top: 158%;
    margin-bottom: 0.5%;
    width: 100%;
 }
@@ -230,15 +230,15 @@
 
 .salary_control{
    width: 90%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12.1%;
    box-shadow: 1px 3px 1px #9E9E9E;   
 }
 
 .intro-control {
-   width: 165%;
-   height: 3.7%;
+   width: 158%;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;   
@@ -254,7 +254,7 @@
 
 .username-control {
    width: 100%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -262,7 +262,7 @@
 
 .major-control {
    width: 90%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -270,7 +270,7 @@
 
 .address_control {
    width: 90%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -286,7 +286,7 @@
 
 .email_control {
    width: 90%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -302,7 +302,7 @@
 
 .other-info-control {
    width: 90%;
-   height: 40px;
+   height: 2.7%;
    border-radius: 3%;
    margin-left: 12%;
    box-shadow: 1px 3px 1px #9E9E9E;
@@ -368,6 +368,7 @@
 
 .birth-day-select { 
    margin-left: 15%; 
+   width: fit-content;
    border-radius: 10px;
    box-shadow: 1px 3px 1px #9E9E9E;
 }
