--- a/frontend/src/components/PostListPage/PostItem.css
+++ b/frontend/src/components/PostListPage/PostItem.css
@@ -2,8 +2,8 @@
     padding: 30px;
     border-radius: 50px;
     margin-top: 30px;
-    height: 350px;
-    width: 1000px;
+    height: 300px;
+    width: 900px;
 
 
     background-color: rgba(180, 180, 180, 0.5);
@@ -38,9 +38,6 @@
 }
 
 .title-post-item40 {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
     width:100%;
     height: 60px;
     border-radius: 10px;
@@ -49,13 +46,16 @@
     color: black;
 
     text-align:left;
-    vertical-align:middle;
+    text-indent: 20px;
+    line-height: 60px;
+    
     font-size:x-large;
     font: bold;
 }
 .title-post-item40:hover{
     color: #ED8201;
 }
+
 
 
 .user-img-post-item40 {
@@ -73,7 +73,7 @@
     position: relative;
     object-fit: fill;
     padding: 2px;
-    height: 60px; 
+    height: 60px;
     width: 60px;
     border-radius: 50%;
     background-color: orange;
