--- a/frontend/src/components/PostListPage/Search.css
+++ b/frontend/src/components/PostListPage/Search.css
@@ -6,10 +6,6 @@
     max-width: 500px;
     min-width: 320px;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
-    padding-top: 80px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
     background-color: #FFDD88;
 }
 
@@ -20,24 +16,23 @@
     color: #012345;
 }
 
-/*.search-grid-layout40 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20px 50px 70px 70px 70px 80px 20px 90px 60px;
-    align-items: center;
-}*/
 .search-grid-layout40 {
     display: grid;
+    align-items: center;
     grid-template-columns: 1fr;
     grid-template-rows: 30px 50px 75px 75px 75px 75px 30px 75px 80px;
-    align-items: center;
+    margin-top: 70px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .search-sub-grid-layout40 {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 49% 2% 49%;
     grid-template-rows: 100%;
     align-items: center;
+    width: 100%;
 }
 
 .text-item-search-frame40 {
@@ -46,39 +41,22 @@
     color: #654321;
 }
 
-.search-input-full {
+.search-input40 {
     display: block;
-    padding-left: 10px;
-    /*outline: none;*/
     border: none;
     border-radius: 2px;
     height: 40px;
-    width: 98%;
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 100%;
 }
-.search-input-full::placeholder {
+.search-input40::placeholder {
+    padding-left: 10px;
     color: #595959;
     font-size: 1rem;
 }
 
-.search-choice-haft40 {
+.search-choice40 {
     height: 40px;
-    width: 96%;
-    margin-left: 2%;
-    margin-right: 2%;
-    /*outline: none;*/
-    border: normal;
-    border-radius: 2px;
-    text-align: center;
-    border: none;
-}
-
-.search-choice-full40 {
-    height: 40px;
-    width: 98%;
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 100%;
     /*outline: none;*/
     border: normal;
     border-radius: 2px;
@@ -104,11 +82,9 @@
     background-color: #FE9312;
     height: 50px;
     width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin: 5%;
     border-radius: 10px;
     text-align: center;
-    outline: none;
     align-items:center;
 }
 .button-occupation-ok40:hover {
@@ -119,10 +95,10 @@
     background-color: rgb(226, 226, 226);
     height: 50px;
     width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin: 5%;
     border-radius: 10px;
     text-align: center;
+    align-items:center;
 }
 .button-occupation-cancel40:hover {
     background-color: rgb(184, 183, 183);
